fixed authentication so that it can work on small devices

--- a/src/client/styles/_layout.auth.less
+++ b/src/client/styles/_layout.auth.less
@@ -109,12 +109,9 @@
     */
 
     .auth__form {
-      display: inline-block;
-      width: 420px;
 
       &.auth__form--register {
         height: 100%;
-        width: 100%;
         padding: 0 35px 25px; }
 
       &.auth__form--signin {
