--- a/src/client/styles/_tools.myutils.less
+++ b/src/client/styles/_tools.myutils.less
@@ -52,7 +52,7 @@
 
     .-center {
       position: absolute;
-      top: 80;
+      top: 80px;
       left: 50%;
       transform: translateX(-50%); }
 
